# libFermat

./: .gitignore  CMakeLists.txt  libFermatConfig.cmake.in
include/: Fermat.h  FermatArray.h  FermatException.h  FermatExpression.h
src/: Fermat.cpp  FermatArray.cpp  FermatExpression.cpp
tool/: fermat.cpp
